spacing for the registerForm and loginForm fixed

--- a/frontEnd/src/css/loginForm.css
+++ b/frontEnd/src/css/loginForm.css
@@ -11,12 +11,18 @@ form > p.User {
 form > input.User {
   width: 250px;
 }
+form > div.errorUser {
+  margin-bottom: -20px;
+}
 form > p.Pass {
   font-size: 160%;
   margin: 30px 145px 0px 0px;
 }
 form > input.Pass {
   width: 250px;
+}
+form > div.errorPass {
+  margin-bottom: -20px;
 }
 @media only screen and (max-width: 600px) {
 }
